# runai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  crew  crew.bat  install.ps1  pyproject.toml  requirements.txt  runai.bat  runai.sh  test_step1.py  test_step2.py  test_step2_no_llm.py
.github/workflows/: docker-build.yml  docker-push.yml  proxy-pypi-publish.yml  pypi-publish.yml  release.yml
cli/: main.py  setup.py
core/: context_store.py  prompts.py  task.py  task_queue.py
docs/: gemini_proxy_plan.md
master/: assembler.py  dispatcher.py  failure_handler.py  orchestrator.py  planner.py  reviewer.py
proxy/runai_gemini_proxy/: __init__.py
runai/: __init__.py
runai/cli/: main.py  setup.py
runai/core/: llm_client.py  task.py  task_queue.py
runai/master/: assembler.py  dispatcher.py  failure_handler.py  orchestrator.py  planner.py  reviewer.py
runai/slave/: agent.py  react_loop.py  scratchpad.py
runai/tools/: __init__.py  ask_master.py  run_code.py  write_file.py
slave/: agent.py  react_loop.py  scratchpad.py
tools/: __init__.py  ask_master.py  list_dir.py  read_file.py  run_code.py  write_file.py
