[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runai"
version = "0.1.0"
description = "CLI for multi-agent AI coding (planner, workers, review, assemble)"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "python-dotenv",
    "openai",
    "google-generativeai",
    "rich",
    "prompt-toolkit",
]

[project.scripts]
runai = "runai.cli.main:main"

[tool.setuptools.packages.find]
include = ["runai*"]
